--- a/src/component/Item/index.css
+++ b/src/component/Item/index.css
@@ -7,6 +7,7 @@ li {
     border: 1px solid #ccc;
     position: relative;
     margin: 0 0 -1px 0;
+    line-height: 30px;
 }
 
 li label {
@@ -23,4 +24,8 @@ li button {
     float: right;
     display: none;
     margin-top: 3px;
-  }
+}
+
+/* li:hover {
+    background-color: #ddd;
+} */
